# learning

./: .gitignore  README.md
astro/: README.md  astro.config.mjs  package.json
aws-lambda-container/: index.mjs
aws-sdk/: package.json
css/: README.md  flex-layout.html  float-layout.html  grid-layout.html  normal-layout.html  package.json
dev-container/: .devcontainer.json  Dockerfile  package-lock.json  package.json
duckdb/: Dockerfile
fastify/: README.md  package.json  server.js  vite.config.js
fuma/: package.json
learn-astro/: README.md  package.json
learn-cloud-init/: cloud-config
learn-dagster/: .gitignore  LICENSE  Makefile  README.md  requirements-dev.in  requirements.in  setup.py
learn-fastapi/: pyproject.toml
learn-fastapi-auth/: pyproject.toml
learn-fastapi-auth/learn_fastapi_auth/: main.py
learn-fastapi/learn_fastapi/: main.py  psql.py
learn-nomad/: README.md  job.hcl
learn-pyscript/: README.md  pyscript-01.html  pyscript-02.html  pyscript-03.html  pyscript-04.html  pyscript-05.html
learn-rust/: .gitignore  README.md
learn-rust-rocket/: Cargo.toml
learn-sematic/: README.md  requirements.txt
learn-t3-stack/: package.json
learn-terraform-aws-asg/: main.tf
learn-web3-dev/: package-lock.json  package.json
meltano/: meltano.yml
ntfy/: Dockerfile  README.md  server.yml
opentui/: package.json
pub-sub/: .env.tmpl  README.md  bun.lockb  package.json
rest+websocket/: bun.lockb  package.json
syntax-highlight-element/: package.json
tailwind/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
(+148 files in other folders)
