[tool.poetry]
name = "learn-fastapi-auth"
version = "0.1.0"
description = ""
authors = ["Data Salaryman <datasalaryman@protonmail.com>"]
readme = "README.md"
packages = [{include = "learn_fastapi_auth"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.1"
python-multipart = "^0.0.5"
uvicorn = "^0.19.0"
pydantic = "^1.10.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
