[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = ["Data Salaryman <datasalaryman@protonmail.com>"]
readme = "README.md"
packages = [{include = "learn_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.44"



[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
